--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,108 @@
 .App {
-  text-align: center;
+  width: 1920px;
+background: linear-gradient(rgba(0, 0, 0, 0.89) 0%, rgba(54, 60, 232, 0.93) 100%, #808080 100%);
+border: 1px solid #707070;
+align-items: flex-start;
 }
 
-.App-logo {
-  height: 40vmin;
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 15px;
+  border-radius: 5px;  
+  background: #fff;
+  outline: none;
+  opacity: 1;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+  border-radius: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 30px;
+  height: 30px;
+  border-width: 10px;
+  border-radius: 50%; 
+  background: lightgrey;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #4CAF50;
+  cursor: pointer;
+}
+.slidercontainer {
+  width: 60%;
+  margin-top: 50px;
+}
+
+.results {
+  width: 602px;
+height: 166px;
+font-family: "Proxima Nova";
+font-weight: normal;
+font-size: 16px;
+text-align: left;
+color: #fff;
+margin-top: 35px;
+
+}
+
+
+
+.label {
+  width: 376px;
+height: 79px;
+font-family: "Proxima Nova";
+font-weight: normal;
+font-size: 30px;
+text-align: left;
+color: #fff5f5;
+
+}
+
+#selector {
+  border-width: 10px;
+  border-color: black;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 100;
 }
 
-.App-link {
-  color: #09d3ac;
+
+
+
+
+#selector {
+  width: 814px;
+height: 189px;
+background: transparent;
+flex-direction: column;
+align-items: flex-start;
+
+}
+
+select {
+  width: 46px;
+height: 41px;
+border-radius: 5px;
+background: #fff;
+border: 1px solid #707070;
+display: inline-block;
+align-self: center;
+
+}
+
+h1 {
+  font-family: "Proxima Nova";
+font-weight: normal;
+font-size: 52px;
+text-align: left;
+color: #fff5f5;
+
 }
