--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,13 @@
 .App {
-  width: 1920px;
+  width: 100dw;
+  height: 100vh;
 background: linear-gradient(rgba(0, 0, 0, 0.89) 0%, rgba(54, 60, 232, 0.93) 100%, #808080 100%);
 border: 1px solid #707070;
 align-items: flex-start;
+}
+
+.container {
+  height: 75vh;
 }
 
 
@@ -54,6 +59,10 @@ margin-top: 35px;
 
 }
 
+footerLink {
+  color: 'white'
+}
+
 
 
 .label {
@@ -75,7 +84,9 @@ color: #fff5f5;
 }
 
 
-
+#footerHeader {
+  color: 'white'
+}
 
 
 #selector {
